--- a/Styles/index.css
+++ b/Styles/index.css
@@ -26,3 +26,14 @@ html[data-theme="dark"] {
     --col-icon-instagram: rgb(201, 94, 174);
     --col-white: #fff;
 }
+
+/* Particle effect*/
+body {
+    font-family: "Poppins";
+}
+
+#home {
+    height: 100vh;
+    width: 100%;
+    overflow: hidden;
+}
