Stlye of Contact form in footer section

--- a/Styles/app.css
+++ b/Styles/app.css
@@ -97,3 +97,165 @@ body {
   font-family: "Poppins", sans-serif;
   background-color: var(--bg);
 }
+
+
+/* 
+---------------------
+Contact Form CSS 
+---------------------
+*/
+
+#contact {
+  background-color: #2b2a2a;
+  color: white;
+  padding-bottom: 50px;
+}
+
+.quote-container {
+  padding: 50px;
+}
+
+.tag {
+  font-family: "Poppins", sans-serif;
+  font-size: 20px;
+  line-height: 26px;
+  text-align: center;
+  color: #fff;
+  margin: 5px auto 0px;
+  display: block;
+  box-sizing: border-box;
+}
+
+#contact h1 {
+  margin: 0;
+  text-align: center;
+  padding-bottom: 20px;
+  padding-top: 50px;
+}
+
+#contact-container {
+  width: 90%;
+  display: flex;
+  /* align-items: center; */
+  justify-content: space-around;
+  margin: 60px auto;
+}
+
+#contact-form-container {
+  width: 30%;
+  box-sizing: border-box;
+  margin-top: 20px;
+}
+
+#contact-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#contact-form input,
+#contact-form textarea {
+  margin: 0px auto 10px;
+  padding: 5px 8px;
+  border: 2px solid transparent;
+  border-bottom: 2px solid #bb86fc;
+  color: white;
+  background: transparent;
+  width: 100%;
+  line-height: 1.6;
+  font-size: 1.25rem;
+  box-sizing: border-box;
+}
+
+#contact-form input:focus,
+#contact-form textarea:focus,
+#contact-form button:focus {
+  outline: none;
+  box-shadow: 0 0 5px #bb86fc;
+  border: 2px solid #bb86fc;
+  border-radius: 23px;
+}
+
+#contact-form button[type="submit"] {
+  background: transparent;
+  font-size: 0.95rem;
+  border: 2px solid #bb86fc;
+  margin-top: 5%;
+  border-radius: 23px;
+  color: white;
+  font-family: sans-serif;
+  font-weight: 700;
+  letter-spacing: 0.046875em;
+  line-height: 1;
+  padding: 0.8em 0.8em 0.78em;
+  text-transform: uppercase;
+}
+
+#contact-form button:hover {
+  background: white;
+  color: #bb86fc;
+}
+
+#contact-form-status {
+  margin-top: 30px;
+  font-size: 1.2rem;
+  font-family: sans-serif;
+}
+
+#my-details-container {
+  width: 40%;
+}
+
+#my-details-container h3 {
+  color: white;
+  font-weight: 550;
+  font-size: 1.5rem;
+  display: inline;
+  border-bottom: 3px solid #bb86fc;
+}
+
+#my-details-container p {
+  margin-top: 1.5rem;
+  margin-bottom: 2rem;
+  font-size: 1.1rem;
+  line-height: 1.4;
+  text-align: justify;
+  font-family: "Poppins", sans-serif;
+  color: #fff;
+}
+
+#address {
+  margin-top: 1.5rem;
+}
+
+.my-details-info-container {
+  margin-bottom: 0.8rem;
+  color: #fff;
+  font-family: "Poppins", sans-serif;
+  display: flex;
+  align-items: center;
+  gap: 14px;
+}
+
+.my-details-info-container {
+  font-size: 1.4rem;
+}
+
+.my-details-info-container span {
+  font-size: 1.1rem;
+}
+
+
+@media only screen and (max-width:560px) {
+  #contact-container {
+    flex-direction: column;
+  }
+
+  #contact-form-container {
+    width: 100%;
+  }
+
+  #my-details-container {
+    width: 100%;
+  }
+}
