--- a/Styles/app.css
+++ b/Styles/app.css
@@ -259,3 +259,39 @@ Contact Form CSS
     width: 100%;
   }
 }
+
+/* 
+---------------------
+Social icons CSS 
+---------------------
+*/
+
+:root {
+  --link-size: 64px;
+  --trans-props: all 0.2s ease;
+  --link-size-footer-b: 40px;
+  --link-size-footer-s: 30px;
+}
+
+.social-icons {
+  display: flex;
+  font-size: 20px;
+  align-items: center;
+  justify-content: center;
+}
+
+.socialicon {
+  display: flex;
+  width: var(--link-size);
+  height: var(--link-size);
+  background-color: #fff;
+  margin: 8px;
+  border-radius: 50%;
+  box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.2);
+  transition: var(--trans-props);
+}
+
+.socialicon:hover {
+  transform: translateY(-4px);
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.16);
+}
