--- a/Styles/app.css
+++ b/Styles/app.css
@@ -295,3 +295,8 @@ Social icons CSS
   transform: translateY(-4px);
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.16);
 }
+
+/* Social icon in dark mode */
+html[light-mode="dark"] .socialicon {
+  background-color: #141516;
+}
