--- a/Styles/app.css
+++ b/Styles/app.css
@@ -300,3 +300,25 @@ Social icons CSS
 html[light-mode="dark"] .socialicon {
   background-color: #141516;
 }
+
+/* TWITTER MICROANIMATION */
+.twitter-icon {
+  width: 40px;
+  margin: 0px auto;
+}
+
+.twitter:hover #wing1 {
+  transform-origin: center;
+  animation: flap 0.4s ease-out infinite alternate;
+}
+
+.twitter:hover #wing2 {
+  transform-origin: center;
+  animation: flap 0.4s ease-in infinite alternate;
+}
+
+@keyframes flap {
+  50% {
+      transform: scaleX(-1) rotate(-45deg) translate(-40px, -40px);
+  }
+}
