--- a/Styles/app.css
+++ b/Styles/app.css
@@ -322,3 +322,46 @@ html[light-mode="dark"] .socialicon {
       transform: scaleX(-1) rotate(-45deg) translate(-40px, -40px);
   }
 }
+
+/* LINKEDIN MICROANIMATION */
+
+.linkedin-icon {
+  margin: 0px auto;
+
+}
+
+.linkedin:hover .linkedin-icon>rect {
+  animation: rect-up 0.3s linear infinite;
+}
+
+@keyframes rect-up {
+  50% {
+      y: 10px;
+      height: 11px;
+  }
+
+  0% {
+      y: 13px;
+      height: 8px;
+  }
+
+}
+
+.linkedin:hover .linkedin-icon>circle {
+  animation: bounce 0.4s linear infinite;
+}
+
+@keyframes bounce {
+  75% {
+      cy: 8px;
+  }
+
+  50% {
+      cy: 4px
+  }
+
+  0% {
+      cy: 4px
+  }
+
+}
