--- a/Styles/app.css
+++ b/Styles/app.css
@@ -158,7 +158,60 @@ html[light-mode="dark"] .nav-link:hover {
   color: #ffffff !important;
 }
 
+/*  HAMBURGER ANIMATION */
 
+.hamburger {
+  width: 2.5em;
+  height: 2em;
+  font-size: 11px;
+  position: relative;
+}
+
+.first,
+.second,
+.third {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.85);
+  height: .45em;
+  width: 100%;
+  float: left;
+  border-radius: 2px;
+  transition: all .35s ease-in-out;
+}
+
+html[light-mode="dark"] .first,
+html[light-mode="dark"] .second,
+html[light-mode="dark"] .third {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.first {
+  top: 0px;
+}
+
+.is-active .first {
+  transform-origin: .167em .33em;
+  transform: rotate(45deg) translate(0.167em, -0.25em);
+}
+
+.second {
+  top: 50%;
+  margin-top: -.25em;
+}
+
+.is-active .second {
+  opacity: 0;
+  transform: translateX(8em)
+}
+
+.third {
+  bottom: 0px;
+  transform-origin: .25em -0.33em;
+}
+
+.is-active .third {
+  transform: rotate(-45deg) translate(-0.167em, 0.083em);
+}
 
 /* 
 ---------------------
