--- a/Styles/app.css
+++ b/Styles/app.css
@@ -142,6 +142,7 @@ html[light-mode="dark"] .navbar-brand:hover {
 /* nav link for light mode */
 .nav-link {
   color: #000000 !important;
+  text-align: center;
 }
 
 .nav-link:hover {
@@ -156,6 +157,12 @@ html[light-mode="dark"] .nav-link {
 
 html[light-mode="dark"] .nav-link:hover {
   color: #ffffff !important;
+}
+
+@media only screen and (min-width: 1024px) {
+  .nav-link {
+    padding: 6px 21px !important;
+  }
 }
 
 /*  HAMBURGER ANIMATION */
