--- a/Styles/app.css
+++ b/Styles/app.css
@@ -164,11 +164,13 @@ html[light-mode="dark"] .nav-link:hover {
   .nav-link {
     padding: 6px 21px !important;
   }
+
   /* Which the nav-Link is active this will apply to that nav-Link */
   .current-link {
     font-weight: bolder;
     position: relative;
   }
+
   .current-link:after {
     content: "";
     position: absolute;
@@ -179,6 +181,7 @@ html[light-mode="dark"] .nav-link:hover {
     width: 32%;
     border-bottom: 3px solid #6a00bb;
   }
+
   .nav-item-hover::after {
     content: "";
     display: block;
@@ -190,6 +193,7 @@ html[light-mode="dark"] .nav-link:hover {
     background-color: #6a00bb;
     transition: all ease-in-out 280ms;
   }
+
   .nav-item:hover::after {
     width: 50%;
   }
@@ -250,6 +254,41 @@ html[light-mode="dark"] .third {
   transform: rotate(-45deg) translate(-0.167em, 0.083em);
 }
 
+/* Theme toggle switch button */
+.dark_toggler {
+  -webkit-appearance: none;
+  position: relative;
+  cursor: pointer;
+  width: 100px;
+  height: 40px;
+  border-radius: 50px;
+  background-image: url(/images/light\ mode\ button\ image.png);
+  background-size: cover;
+  transition: background-image 0.9s;
+  box-shadow: 0px 2px 5px 1px gray;
+}
+.dark_toggler:checked {
+  background-image: url(/images/dark\ mode\ button\ image.png);
+  transition: background-image 0.9s;
+  box-shadow: 0px 2px 5px 1px rgb(187, 134, 201);
+}
+.dark_toggler:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 40px;
+  width: 40px;
+  background-color: navy;
+  border-radius: 50px;
+  transition: all 0.9s;
+  background-color: #f7ca33;
+}
+.dark_toggler:checked:before {
+  transform: translate(150%);
+  transition: all 0.9s;
+  background-color: #bb86fc;
+}
 /* 
 ---------------------
 Contact Form CSS 
