--- a/Styles/app.css
+++ b/Styles/app.css
@@ -123,7 +123,7 @@ html[light-mode="dark"] .dark-theme {
 .navbar-brand {
   font-family: Agustina;
   font-size: 30px;
-  font-weight: bold;
+  font-weight: bolder;
 }
 
 .navbar-brand:hover {
