--- a/Styles/education&experience.css
+++ b/Styles/education&experience.css
@@ -1,9 +1,80 @@
 /* -----Education and Experience----- */
 
+/* Dark and Light theme */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+}
+
+html[light-mode="light"] {
+    --bg1-color: white;
+    --shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    --border: 1px solid #ecf0f3;
+    --meta-col: #444;
+    --head-col: black;
+    --tint-col: #ecf0f3;
+}
+
+html[light-mode="dark"] {
+    --bg1-color: #272727;
+    --shadow: 0 4px 8px 0 rgba(104, 102, 102, 0.2);
+    --border: none;
+    --meta-col: rgb(155, 149, 149);
+    --head-col: #fff;
+    --tint-col: #ecf0f3be;
+}
+
+html {
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+}
+
+body {
+    font-family: "Roboto";
+    font-size: 17px;
+    font-weight: 400;
+    /* background-color: #eee; */
+}
+
+h1 {
+    font-size: 200%;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    font-weight: 400;
+}
+
+section {
+    padding-top: 100px;
+}
+
+.education_head {
+    font-weight: bold;
+}
+
+/*color of education page heading*/
+
+.edu_background {
+    color: #4e00bb;
+}
+
+.s2 {
+    overflow-x: hidden;
+}
+
+.s2 .head {
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+
+
 .box-container {
     position: relative;
     width: 75%;
-    margin-top: 30px;
+    margin: -50px auto 100px;
+    /* background:white; */
 }
 
 .box {
@@ -16,7 +87,7 @@
 }
 
 .box:nth-child(2n) {
-    left: 53%;
+    left: 55%;
     text-align: left;
 }
 
@@ -36,11 +107,11 @@
 }
 
 .box:nth-child(2n+1)::after {
-    right: -11.8%;
+    right: -14.5%;
 }
 
 .box:nth-child(2n)::after {
-    left: -9%;
+    left: -14.2%;
 }
 
 .logo {
@@ -60,38 +131,36 @@
 
 .designation {
     font-size: 1.6rem;
-    margin: 0;
+    font-weight: 600;
+    color: #4e00bb;
 }
 
 .company-name {
-    margin: 8px 0 0;
-    color: #eb822d;
-    font-weight: 400;
-    font-size: 1.3rem;
+    color: orange;
+    font-weight: 600;
+    font-size: 1.2rem;
 }
 
 .duration {
     font-weight: 100;
-    color: grey;
-    font-size: 1rem;
-    margin-top: 6px;
+    color: rgb(54, 52, 52);
+    font-size: 0.9rem;
+    font-weight: 600;
 }
 
-.certificate{
-    margin-top: -26px;
-    margin-bottom: -10px;
+.certificate {
+    margin-bottom: 2px;
 }
 
-.certificate a{
+.certificate a {
     text-decoration: none;
-    font-size: 1.3rem;
+    font-size: 1rem;
 }
 
 .description {
-    font-size: 14px;
-    padding: 2px;
-    color: grey;
-    line-height: 20px;
+    font-size: 16px;
+    color: rgb(54, 52, 52);
+    line-height: 1.4;
     text-align: justify;
 }
 
@@ -102,20 +171,20 @@
     width: 0;
     top: 10%;
     left: 50%;
-    border: 1px dashed #0096fa6b;
+    border: 1px dashed #bdaad8;
     height: 66%;
 }
 
 .divider .traveller {
     position: sticky;
     top: 135px;
-    z-index: 2;
+    z-index: 1;
 }
 
 .divider i {
     transform: rotate(90deg);
-    margin-top: -35px;
+    margin-top: -15px;
     display: block;
-    color: #2857a4;
+    color: #4e00bb;
+    font-size: 24px;
 }
-
