--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -2,60 +2,96 @@
 
 #portfolio-container {
     width: 100%;
+    margin-top: 70px;
+    margin-bottom: 100px;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .portfolio-details-container {
-    max-width: 350px;
-    margin: 20px;
+    width: 80%;
+    margin: 40px auto;
+    border-radius: 10px;
+    background-color: #f6f6f6;
+    box-shadow: 0 0 10px #90999d;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    transition: all 0.3s ease-in-out;
+}
+
+html[light-mode="dark"] .portfolio-details-container {
+    background-color: #2b2a2A;
+    box-shadow: 0 0 10px black;
+}
+
+.portfolio-details-container:hover {
+    box-shadow: 0 0 10px #74ADC8;
+    transform: scale(1.02);
+    transition: all 0.3s ease-in-out;
 }
 
 .portfolio-image {
-    width: 350px;
-    height: 280px;
-    border-radius: 5%;
+    min-width: 350px;
+    max-width: 350px;
     transition: transform 0.3s ease-in-out;
 }
 
 .portfolio-image img {
     width: 100%;
     height: 100%;
-    border-radius: 5%;
+    border-bottom-left-radius: 10px;
+    border-top-left-radius: 10px;
+    transition: all 0.3s ease-in-out;
 }
 
-.portfolio-image:hover {
-    box-shadow: 0 0 20px #74ADC8;
-    transform: scale(1.02);
+.portfolio-details{
+    display: flex;
+    flex-direction: column;
+    width: 70%;
 }
 
-.portfolio-details {
-    margin: 10px;
-    font-size: 1.1rem;
-    color:rgb(68, 66, 66);
-    /* border: 2px solid black; */
+.portfolio-details a {
+    text-decoration: none;
+    text-align: center;
 }
 
-.portfolio-details h2{
-    color:#2857a4;
+.portfolio-details h2 {
+    color: #4e00bb;
+    font-size: 30px;
+    font-weight: 600;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    transition: all 0.3s ease-in-out;
 }
 
-.portfolio-details h3{
-    margin-top: -10px;
+.portfolio-details h4 {
+    font-size: 18px;
+    text-align: center;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    transition: all 0.3s ease-in-out;
 }
 
-.portfolio-details h4{
-    margin-top: -10px;
-    color: #eb822d;
-    font-weight: 400;
+html[light-mode="dark"] .portfolio-details h4{
+    color: white;
 }
+
 .portfolio-details h4 span{
-    color: #2857a4;
+    font-weight: 600;
 }
 
-.portfolio-details ul{
-    margin-top: -15px;
-    margin-left: -22px;
+
+.portfolio-details ul {
+    margin: 20px auto 20px;
+    margin-left: 40px;
     line-height: 1.4;
+    transition: all 0.3s ease-in-out;
+}
+
+html[light-mode="dark"] .portfolio-details ul{
+    color: white;
 }
