--- a/Styles/skills.css
+++ b/Styles/skills.css
@@ -1,6 +1,7 @@
 /* ----Skills---- */
 
 .all-skills {
+    margin: 100px;
     position: relative;
     display: flex;
     justify-content: center;
@@ -18,7 +19,7 @@
     border-radius: 50px;
     color: white;
     height: 40px;
-    z-index: 10;
+    z-index: 1;
     font-size: 1.4rem;
     font-weight: 400;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
