--- a/Styles/skills.css
+++ b/Styles/skills.css
@@ -20,8 +20,8 @@
     color: white;
     height: 40px;
     z-index: 1;
-    font-size: 1.4rem;
-    font-weight: 400;
+    font-size: 1rem;
+    font-weight: 600;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
@@ -178,7 +178,7 @@
 .empty-circle {
     position: absolute;
     border-radius: 50%;
-    border: 1px solid lightgray;
+    border: 1px solid lightgrey ;
 }
 
 .circle-1 {
