--- a/Styles/education&experience.css
+++ b/Styles/education&experience.css
@@ -19,20 +19,29 @@ body {
 }
 
 .header {
-    margin: 60px auto 0px;
+    margin: 80px auto 0px;
     width: 90%;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
+    /* border: 1px solid red; */
 }
 
 .header-img {
-    margin-top: 40px;
+    width: 600px;
+    height: 500px;
+    /* border: 1px solid green; */
+}
+
+.header-img experience-img {
+    width: 100%;
+    height: 100%;
 }
 
 .quote {
     width: 40%;
+    /* border: 1px solid red; */
 }
 
 .education_head {
@@ -81,23 +90,24 @@ body {
     right: 0px;
 }
 
-.box::after {
+h4 {
+    position: relative;
+}
+
+h4::after {
     content: '';
     position: absolute;
     width: 15px;
     height: 15px;
     background-color: lightgrey;
-    top: 25%;
+    top: 20%;
+    right: -16%;
     border-radius: 50%;
     z-index: 1;
 }
 
-.box:nth-child(2n+1)::after {
-    right: -14.5%;
-}
-
-.box:nth-child(2n)::after {
-    left: -14.2%;
+.nirmal::after {
+    left: -15.75%;
 }
 
 .logo {
@@ -159,10 +169,10 @@ html[light-mode="dark"] .description {
 .divider {
     position: absolute;
     width: 0;
-    top: 10%;
+    top: 7%;
     left: 50%;
     border: 1px dashed #bdaad8;
-    height: 66%;
+    height: 68%;
 }
 
 .divider .traveller {
@@ -177,4 +187,489 @@ html[light-mode="dark"] .description {
     display: block;
     color: #4e00bb;
     font-size: 24px;
+}
+
+
+@media only screen and (max-width: 1300px) { 
+     h4::after {
+    right: -16.8%;
+    }
+}
+@media only screen and (max-width: 1200px) {
+    .header-img {
+        width: 575px;
+        height: 475px;
+    }
+    .quote{
+        margin-top: 30px;
+    }
+    .box-container {
+        margin: 90px auto 90px;
+        width: 80%;
+    }
+    h4::after {
+    right: -16.5%;
+    }
+    .nirmal::after {
+        left: -16%;
+    }
+    .divider {
+    top: 6%;
+    height: 68.5%;
+    }
+}
+@media only screen and (max-width: 1100px) {
+    .header-img {
+        width: 550px;
+        height: 450px;
+    }
+    .quote h2 {
+        font-size: 1.9rem;
+    }
+    .quote p {
+        font-size: 17px;
+        font-weight: 600;
+    }
+    .main-heading {
+        margin-top: 50px;
+    }
+    .main-heading .head {
+        font-size: 1.9rem;
+        letter-spacing: 2.5px;
+    }
+    .box-container {
+        margin: 90px auto 90px;
+        width: 80%;
+    }
+    .logo {
+        width: 57px;
+    }
+    #south-street-logo {
+        width: 120px;
+        margin-top: -15px;
+    }
+    .designation {
+        font-size: 1.55rem;
+    }
+    .company-name {
+        font-size: 1.15rem;
+    }
+    .duration {
+        font-size: 0.85rem;
+    }
+    .description {
+    font-size: 16px;
+    line-height: 1.3;
+    }
+    h4::after {
+    right: -17%;
+    }
+    .nirmal::after {
+        left: -16.5%;
+    }
+    .divider {
+    top: 6%;
+    height: 68.5%;
+    }
+}
+@media only screen and (max-width: 1036px) {
+    .header-img {
+        width: 500px;
+        height: 400px;
+    }
+    .quote{
+        margin-top: 30px;
+    }
+    .quote h2 {
+        font-size: 1.8rem;
+    }
+    .quote p {
+        font-size: 16.8px;
+        font-weight: 600;
+    }
+    .main-heading {
+        margin-top: 50px;
+    }
+    .main-heading .head {
+        font-size: 1.8rem;
+        letter-spacing: 2px;
+    }
+    .box-container {
+        margin: 80px auto 80px;
+        width: 85%;
+    }
+    .logo {
+        width: 55px;
+    }
+    #south-street-logo {
+        width: 120px;
+        margin-top: -15px;
+    }
+    .designation {
+        font-size: 1.5rem;
+    }
+    .company-name {
+        font-size: 1.1rem;
+    }
+    .duration {
+        font-size: 0.85rem;
+    }
+    .description {
+    font-size: 15px;
+    line-height: 1.3;
+    }
+    h4::after {
+    right: -17%;
+    }
+    .nirmal::after {
+        left: -16.5%;
+    }
+    .divider {
+    top: 6%;
+    height: 69.5%;
+    }
+}
+@media only screen and (max-width: 970px) {
+    .logo {
+        width: 54px;
+    }
+    .designation {
+        font-size: 1.35rem;
+    }
+    .company-name {
+        font-size: 1.05rem;
+    }
+    .duration {
+        font-size: 0.85rem;
+    }
+    .description {
+    font-size: 14.8px;
+    line-height: 1.38;
+    }
+    h4::after {
+    right: -17.2%;
+    }
+    .nirmal::after {
+        left: -16.8%;
+    }
+    .divider {
+    top: 6%;
+    height: 68.5%;
+    }
+}
+@media only screen and (max-width: 920px) {
+    .header-img {
+        width: 450px;
+        height: 350px;
+    }
+    .quote{
+        margin-top: 30px;
+    }
+    .quote h2 {
+        font-size: 1.6rem;
+    }
+    .quote p {
+        font-size: 16.5px;
+        font-weight: 600;
+    }
+    .main-heading {
+        margin-top: 50px;
+    }
+    .main-heading .head {
+        font-size: 1.6rem;
+        letter-spacing: 1.8px;
+    }
+    .box-container {
+        margin: 70px auto 70px;
+        width: 90%;
+    }
+    .logo {
+        width: 53px;
+    }
+    #south-street-logo {
+        width: 110px;
+        margin-top: -15px;
+    }
+    .designation {
+        font-size: 1.35rem;
+    }
+    .company-name {
+        font-size: 1.05rem;
+    }
+    .duration {
+        font-size: 0.9rem;
+    }
+    .description {
+    font-size: 14px;
+    line-height: 1.4;
+    }
+    h4::after {
+    right: -17.3%;
+    }
+    .nirmal::after {
+        left: -16.8%;
+    }
+    .divider {
+    top: 6%;
+    height: 68.5%;
+    }
+}
+@media only screen and (max-width: 875px) {
+    .logo {
+        width: 54px;
+    }
+    .designation {
+        font-size: 1.35rem;
+    }
+    .company-name {
+        font-size: 1.05rem;
+    }
+    .duration {
+        font-size: 0.9rem;
+    }
+    .description {
+    font-size: 13.8px;
+    line-height: 1.4;
+    }
+    h4::after {
+    right: -17.2%;
+    }
+    .nirmal::after {
+        left: -17%;
+    }
+    .divider {
+    top: 6%;
+    height: 68.5%;
+    }
+}
+@media only screen and (max-width: 840px) {
+    .header-img {
+        width: 400px;
+        height: 300px;
+    }
+    .quote{
+        margin-top: 30px;
+    }
+    .quote h2 {
+        font-size: 1.5rem;
+    }
+    .quote p {
+        font-size: 16px;
+        font-weight: 600;
+    }
+    .main-heading {
+        margin-top: 50px;
+    }
+    .main-heading .head {
+        font-size: 1.5rem;
+        letter-spacing: 1.5px;
+    }
+    .box-container {
+        margin: 50px auto 50px;
+        width: 90%;
+    }
+    .logo {
+        width: 52px;
+    }
+    #south-street-logo {
+        width: 110px;
+        margin-top: -10px;
+    }
+    .designation {
+        font-size: 1.3rem;
+    }
+    .company-name {
+        font-size: 1rem;
+    }
+    .duration {
+        font-size: 0.85rem;
+    }
+    .description {
+    font-size: 13.5px;
+    line-height: 1.4;
+    }
+    h4::after {
+    right: -17.9%;
+    }
+    .nirmal::after {
+        left: -17.3%;
+    }
+    .divider {
+    top: 6%;
+    height: 68.5%;
+    }
+}
+@media only screen and (max-width: 795px) {
+      .logo {
+        width: 50px;
+    }
+    .designation {
+        font-size: 1.25rem;
+    }
+    .company-name {
+        font-size: 0.95rem;
+    }
+    .duration {
+        font-size: 0.75rem;
+    }
+    .description {
+    font-size: 13px;
+    line-height: 1.35;
+    }
+    h4::after {
+    right: -17.8%;
+    }
+    .nirmal::after {
+        left: -17.5%;
+    }
+    .divider {
+    top: 6%;
+    height: 68%;
+    }
+}
+@media only screen and (max-width:768px) {
+    .header {
+        flex-direction: column-reverse;
+        text-align: center;
+        width: 100%;
+        margin-top: 120px;
+    }
+
+    .header-img {
+        margin: auto;
+        margin-top: 40px;
+        width: 90%;
+        height: 100%;
+    }
+
+    .quote {
+        width: 90%;
+    }
+
+    .main-heading {
+        margin-top: 100px;
+    }
+
+    .main-heading .head {
+        letter-spacing: 1;
+        font-size: 1.8rem;
+        font-weight: bolder;
+    }
+
+    .box-container {
+        width: 100%;
+    }
+
+    .box {
+        width: 75%;
+        left: 20%;
+        text-align: left;
+    }
+
+    .box:nth-child(2n) {
+        left: 20%;
+        text-align: left;
+    }
+
+    h4::after,
+    .nirmal::after {
+        left: -15.7%;
+    }
+
+    .logo {
+        position: static;
+        margin-top: 20px;
+        margin-bottom: 30px;
+    }
+
+    #south-street-logo {
+        width: 50%;
+        margin-top: 0;
+        margin-bottom: -20px;
+    }
+
+    .divider {
+        left: 10%;
+        top: 13%;
+        height: 83%;
+    }
+
+    .divider i {
+        margin-top: -20px;
+    }
+}
+@media only screen and (max-width:700px) {
+    h4::after,
+    .nirmal::after {
+        left: -16%;
+    }
+    .divider {
+        left: 10%;
+        top: 10%;
+        height: 87%;
+    }
+}
+@media only screen and (max-width:665px) {
+    .divider {
+        top: 5.5%;
+        height: 91.5%;
+    }   
+    h4::after,
+    .nirmal::after {
+        left: -16.1%;
+    }
+}
+@media only screen and (max-width:640px) {
+    h4::after,
+    .nirmal::after {
+        left: -16.2%;
+    }
+}
+@media only screen and (max-width:600px) {
+    h4::after,
+    .nirmal::after {
+        left: -16.35%;
+    }
+}
+@media only screen and (max-width:575px) {
+    h4::after,
+    .nirmal::after {
+        left: -16.5%;
+    }
+}
+@media only screen and (max-width:545px) {
+    h4::after,
+    .nirmal::after {
+        left: -16.8%;
+    }
+}
+@media only screen and (max-width:490px) {
+    h4::after,
+    .nirmal::after {
+        left: -17%;
+    }
+}
+@media only screen and (max-width:440px) {
+    h4::after,
+    .nirmal::after {
+        left: -17.2%;
+    }
+}
+@media only screen and (max-width:420px) {
+    h4::after,
+    .nirmal::after {
+        left: -17.5%;
+    }
+}
+@media only screen and (max-width:400px) {
+    h4::after,
+    .nirmal::after {
+        left: -17.7%;
+    }
+}
+@media only screen and (max-width:380px) {
+    h4::after,
+    .nirmal::after {
+        left: -17.9%;
+    }
 }
