--- a/Styles/education&experience.css
+++ b/Styles/education&experience.css
@@ -560,8 +560,8 @@ html[light-mode="dark"] .description {
         margin-top: 120px;
     }
 
-    .experience-video,
-    .education-video {
+    .experience-img,
+    .education-img {
         margin: auto;
         margin-top: 40px;
         width: 90%;
