--- a/Styles/education&experience.css
+++ b/Styles/education&experience.css
@@ -13,6 +13,7 @@ html {
 }
 
 body {
+    overflow-x: hidden;
     font-family: "Roboto";
     font-size: 17px;
     font-weight: 400;
@@ -196,11 +197,17 @@ html[light-mode="dark"] .description {
 
 
 @media only screen and (max-width: 1300px) { 
-     h4::after {
+    body {
+        overflow-x: hidden;
+    }
+    h4::after {
     right: -16.8%;
     }
 }
 @media only screen and (max-width: 1200px) {
+    body {
+        overflow-x: hidden;
+    }
     .experience-img {
         width: 575px;
         height: 475px;
@@ -228,6 +235,9 @@ html[light-mode="dark"] .description {
     }
 }
 @media only screen and (max-width: 1100px) {
+    body {
+        overflow-x: hidden;
+    }
     .experience-img {
         width: 550px;
         height: 450px;
@@ -286,6 +296,9 @@ html[light-mode="dark"] .description {
     }
 }
 @media only screen and (max-width: 1036px) {
+    body {
+        overflow-x: hidden;
+    }
     .experience-img {
         width: 500px;
         height: 400px;
@@ -347,6 +360,9 @@ html[light-mode="dark"] .description {
     }
 }
 @media only screen and (max-width: 970px) {
+    body {
+        overflow-x: hidden;
+    }
     .logo {
         width: 54px;
     }
@@ -375,6 +391,9 @@ html[light-mode="dark"] .description {
     }
 }
 @media only screen and (max-width: 920px) {
+    body {
+        overflow-x: hidden;
+    }
     .experience-img {
         width: 450px;
         height: 350px;
@@ -436,6 +455,9 @@ html[light-mode="dark"] .description {
     }
 }
 @media only screen and (max-width: 875px) {
+    body {
+        overflow-x: hidden;
+    }
     .logo {
         width: 54px;
     }
@@ -464,6 +486,9 @@ html[light-mode="dark"] .description {
     }
 }
 @media only screen and (max-width: 840px) {
+    body {
+        overflow-x: hidden;
+    }
     .experience-img {
         width: 400px;
         height: 300px;
@@ -525,7 +550,10 @@ html[light-mode="dark"] .description {
     }
 }
 @media only screen and (max-width: 795px) {
-      .logo {
+    body {
+        overflow-x: hidden;
+    }
+    .logo {
         width: 50px;
     }
     .designation {
@@ -553,6 +581,9 @@ html[light-mode="dark"] .description {
     }
 }
 @media only screen and (max-width:768px) {
+    body {
+        overflow-x: hidden;
+    }
     .header {
         flex-direction: column-reverse;
         text-align: center;
@@ -625,6 +656,9 @@ html[light-mode="dark"] .description {
     }
 }
 @media only screen and (max-width:700px) {
+    body {
+        overflow-x: hidden;
+    }
     h4::after,
     .nirmal::after {
         left: -16%;
@@ -636,6 +670,9 @@ html[light-mode="dark"] .description {
     }
 }
 @media only screen and (max-width:665px) {
+    body {
+        overflow-x: hidden;
+    }
     .divider {
         top: 5.5%;
         height: 91.5%;
@@ -646,54 +683,81 @@ html[light-mode="dark"] .description {
     }
 }
 @media only screen and (max-width:640px) {
+    body {
+        overflow-x: hidden;
+    }
     h4::after,
     .nirmal::after {
         left: -16.2%;
     }
 }
 @media only screen and (max-width:600px) {
+    body {
+        overflow-x: hidden;
+    }
     h4::after,
     .nirmal::after {
         left: -16.35%;
     }
 }
 @media only screen and (max-width:575px) {
+    body {
+        overflow-x: hidden;
+    }
     h4::after,
     .nirmal::after {
         left: -16.5%;
     }
 }
 @media only screen and (max-width:545px) {
+    body {
+        overflow-x: hidden;
+    }
     h4::after,
     .nirmal::after {
         left: -16.8%;
     }
 }
 @media only screen and (max-width:490px) {
+    body {
+        overflow-x: hidden;
+    }
     h4::after,
     .nirmal::after {
         left: -17%;
     }
 }
 @media only screen and (max-width:440px) {
+    body {
+        overflow-x: hidden;
+    }
     h4::after,
     .nirmal::after {
         left: -17.2%;
     }
 }
 @media only screen and (max-width:420px) {
+    body {
+        overflow-x: hidden;
+    }
     h4::after,
     .nirmal::after {
         left: -17.5%;
     }
 }
 @media only screen and (max-width:400px) {
+    body {
+        overflow-x: hidden;
+    }
     h4::after,
     .nirmal::after {
         left: -17.7%;
     }
 }
 @media only screen and (max-width:380px) {
+    body {
+        overflow-x: hidden;
+    }
     h4::after,
     .nirmal::after {
         left: -17.9%;
