--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -34,8 +34,7 @@ html[light-mode="dark"] .portfolio-details-container {
 }
 
 .portfolio-image {
-    min-width: 350px;
-    max-width: 350px;
+    width: 32%;
     transition: transform 0.3s ease-in-out;
 }
 
@@ -47,15 +46,16 @@ html[light-mode="dark"] .portfolio-details-container {
     transition: all 0.3s ease-in-out;
 }
 
-.portfolio-details{
+.portfolio-details {
     display: flex;
     flex-direction: column;
-    width: 70%;
+    width: 68%;
 }
 
 .portfolio-details a {
     text-decoration: none;
     text-align: center;
+    width: 100%;
 }
 
 .portfolio-details h2 {
@@ -68,19 +68,18 @@ html[light-mode="dark"] .portfolio-details-container {
     transition: all 0.3s ease-in-out;
 }
 
-.portfolio-details h4 {
-    font-size: 18px;
+.portfolio-details h5 {
+    font-size: 20px;
     text-align: center;
-    margin-top: 15px;
-    margin-bottom: 15px;
+    margin: 15px;
     transition: all 0.3s ease-in-out;
 }
 
-html[light-mode="dark"] .portfolio-details h4{
+html[light-mode="dark"] .portfolio-details h5 {
     color: white;
 }
 
-.portfolio-details h4 span{
+.portfolio-details h5 span {
     font-weight: 600;
 }
 
@@ -92,6 +91,124 @@ html[light-mode="dark"] .portfolio-details h4{
     transition: all 0.3s ease-in-out;
 }
 
-html[light-mode="dark"] .portfolio-details ul{
+html[light-mode="dark"] .portfolio-details ul {
     color: white;
+}
+
+@media only screen and (max-width:1100px) {
+    .portfolio-details-container {
+        width: 83%;
+    }
+}
+
+@media only screen and (max-width:1100px) {
+    .portfolio-details-container {
+        width: 90%;
+    }
+}
+
+@media only screen and (max-width:980px) {
+    .portfolio-image {
+        width: 34%;
+    }
+
+    .portfolio-details {
+        width: 65%;
+    }
+}
+
+/* @media only screen and (max-width:880px) {
+    .portfolio-image {
+        width: 36%;
+    }
+
+    .portfolio-details {
+        width: 63%;
+    }
+} */
+
+@media only screen and (max-width:900px) {
+    body{
+        overflow-x: hidden;
+    }
+    #portfolio-container {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: start;
+        flex-wrap: wrap;
+    }
+
+    .portfolio-details-container {
+        width: 43%;
+        height: 480px;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .portfolio-image {
+        width: 100%;
+        height: 300px;
+    }
+
+    .portfolio-image img {
+        border-bottom-left-radius: 0;
+        border-top-right-radius: 10px;
+    }
+
+    .portfolio-details {
+        width: 90%;
+    }
+
+    .portfolio-details h2 {
+        margin: auto;
+        font-size: 26px;
+    }
+
+    .portfolio-details h5 {
+        text-align: justify;
+        line-height: 1.2;
+        font-size: 17px;
+    }
+
+    .portfolio-details ul {
+        display: none;
+    }
+
+}
+@media only screen and (max-width:730px) {
+    .portfolio-details-container {
+        width: 43%;
+        height: 460px;
+    }
+    
+    .portfolio-image {
+        width: 100%;
+        height: 250px;
+    }
+}
+@media only screen and (max-width:630px) {
+    .portfolio-details-container {
+        width: 80%;
+        height: 550px;
+    }
+
+    .portfolio-image {
+        width: 100%;
+        height: 350px;
+    }
+    .portfolio-details {
+        width: 95%;
+    }
+
+    .portfolio-details h2 {
+        margin: auto;
+        font-size: 30px;
+    }
+
+    .portfolio-details h5 {
+        text-align: left;
+        line-height: 1.3;
+        font-size: 20px;
+    }
+
 }
