--- a/Styles/education&experience.css
+++ b/Styles/education&experience.css
@@ -38,8 +38,15 @@ body {
     height: 500px;
 }
 
-.experience-img experience-video,
-.education-img education-video {
+.skills-img {
+    width: 658px;
+    height: 600px;
+    margin-top: -50px;
+}
+
+.experience-img .experience-video,
+.education-img .education-video,
+.skills-img .skills-video  {
     width: 100%;
     height: 100%;
 }
@@ -222,7 +229,10 @@ html[light-mode="dark"] .description {
         width: 475px;
         height: 475px;
     }
-
+    .skills-img {
+        width: 635px;
+        height: 575px;
+    }
     .quote {
         margin-top: 30px;
     }
@@ -261,6 +271,11 @@ html[light-mode="dark"] .description {
     .education-img {
         width: 450px;
         height: 450px;
+    }
+
+    .skills-img {
+        width: 610px;
+        height: 550px;
     }
 
     .quote h2 {
@@ -340,6 +355,10 @@ html[light-mode="dark"] .description {
     .education-img {
         width: 400px;
         height: 400px;
+    }
+    .skills-img {
+        width: 560px;
+        height: 500px;
     }
 
     .quote {
@@ -465,6 +484,10 @@ html[light-mode="dark"] .description {
         width: 350px;
         height: 350px;
     }
+    .skills-img {
+        width: 510px;
+        height: 450px;
+    }
 
     .quote {
         margin-top: 30px;
@@ -589,6 +612,10 @@ html[light-mode="dark"] .description {
         width: 300px;
         height: 300px;
     }
+    .skills-img {
+        width: 460px;
+        height: 400px;
+    }
 
     .quote {
         margin-top: 30px;
@@ -712,7 +739,8 @@ html[light-mode="dark"] .description {
     }
 
     .experience-img,
-    .education-img {
+    .education-img,
+    .skills-img {
         margin: auto;
         margin-top: 40px;
         width: 90%;
@@ -818,8 +846,9 @@ html[light-mode="dark"] .description {
     body {
         overflow-x: hidden;
     }
-    #education{
-        margin-top:75px ;
+
+    #education {
+        margin-top: 75px;
     }
 
     h4::after,
@@ -887,6 +916,7 @@ html[light-mode="dark"] .description {
     body {
         overflow-x: hidden;
     }
+
     h4::after,
     .nirmal::after,
     .front-end::after {
@@ -916,7 +946,8 @@ html[light-mode="dark"] .description {
     .front-end::after {
         left: -17.7%;
     }
-    .edu-divider{
+
+    .edu-divider {
         top: 6%;
     }
 }
