--- a/Styles/education&experience.css
+++ b/Styles/education&experience.css
@@ -46,7 +46,7 @@ body {
 
 .experience-img .experience-video,
 .education-img .education-video,
-.skills-img .skills-video  {
+.skills-img .skills-video {
     width: 100%;
     height: 100%;
 }
@@ -204,7 +204,7 @@ html[light-mode="dark"] .description {
     font-size: 24px;
 }
 
-
+/* Media Query for education and experience */
 @media only screen and (max-width: 1300px) {
     body {
         overflow-x: hidden;
@@ -229,10 +229,12 @@ html[light-mode="dark"] .description {
         width: 475px;
         height: 475px;
     }
+
     .skills-img {
         width: 635px;
         height: 575px;
     }
+
     .quote {
         margin-top: 30px;
     }
@@ -356,6 +358,7 @@ html[light-mode="dark"] .description {
         width: 400px;
         height: 400px;
     }
+
     .skills-img {
         width: 560px;
         height: 500px;
@@ -484,6 +487,7 @@ html[light-mode="dark"] .description {
         width: 350px;
         height: 350px;
     }
+
     .skills-img {
         width: 510px;
         height: 450px;
@@ -612,6 +616,7 @@ html[light-mode="dark"] .description {
         width: 300px;
         height: 300px;
     }
+
     .skills-img {
         width: 460px;
         height: 400px;
@@ -869,11 +874,13 @@ html[light-mode="dark"] .description {
         left: -16.35%;
     }
 }
+
 @media only screen and (max-width: 609px) and (min-width: 584px) {
-.edu-divider{
-    height: 68.5%;
-}
+    .edu-divider {
+        height: 68.5%;
     }
+}
+
 @media only screen and (max-width:575px) {
     body {
         overflow-x: hidden;
