--- a/Styles/skills.css
+++ b/Styles/skills.css
@@ -240,7 +240,7 @@
 
 @media only screen and (min-width:320px) and (max-width:400px) {
     .all-skills{
-        margin: -20px;
+        margin-top: -20px;
     }
     .web,
     .skill {
